Correct spelling error

--- a/lab_classification/runClassifierPytorch.ipynb
+++ b/lab_classification/runClassifierPytorch.ipynb
@@ -206,7 +206,7 @@
     "    \n",
     "    def __repr__(self):\n",
     "        head = \"Dataset \" + self.__class__.__name__ + \" : \" + self.split\n",
-    "        body = [f\"Number of datapoints: {self.__len__()}\"]\n",
+    "        body = [f\"Number of images: {self.__len__()}\"]\n",
     "        body.append(f\"Categories: {len(set(self.labels))}\")\n",
     "        body.append(f\"Root location: {self.datadir}\")\n",
     "        if hasattr(self, \"transforms\") and self.transforms is not None:\n",
@@ -267,21 +267,21 @@
      "output_type": "stream",
      "text": [
       "Dataset ArtificialFlyingObjectsDataset : training\n",
-      "    Number of datapoints: 10817\n",
+      "    Number of images: 10817\n",
       "    Categories: 3\n",
       "    Root location: ../data/FlyingObjectDataset_10K\n",
       "    Transforms: Compose(\n",
       "    ToTensor()\n",
       ")\n",
       "Dataset ArtificialFlyingObjectsDataset : validation\n",
-      "    Number of datapoints: 2241\n",
+      "    Number of images: 2241\n",
       "    Categories: 3\n",
       "    Root location: ../data/FlyingObjectDataset_10K\n",
       "    Transforms: Compose(\n",
       "    ToTensor()\n",
       ")\n",
       "Dataset ArtificialFlyingObjectsDataset : testing\n",
-      "    Number of datapoints: 2220\n",
+      "    Number of images: 2220\n",
       "    Categories: 3\n",
       "    Root location: ../data/FlyingObjectDataset_10K\n",
       "    Transforms: Compose(\n",
