removing scipy dependencies

--- a/lab_gan/runGAN.ipynb
+++ b/lab_gan/runGAN.ipynb
@@ -351,7 +351,7 @@
     "    test_fake_last_imgs = modelObj.generator.predict(test_first_imgs)\n",
     "    test_img_name = output_log_dir + \"/gen_img_epoc_\" + str(epoch) + \".png\"\n",
     "    merged_img = np.vstack((test_first_imgs[0],test_last_imgs[0],test_fake_last_imgs[0]))\n",
-    "    scipy.misc.imsave(test_img_name, merged_img)\n",
+    "    imageio.imwrite(test_img_name, img_as_ubyte(merged_img))\n",
     "  "
    ]
   },
