fixed gpu selection

--- a/lab_classification/runClassifier.ipynb
+++ b/lab_classification/runClassifier.ipynb
@@ -66,10 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating network model using gpu 1\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "from configClassifier import *\n",
+    "from utilsClassifier import *\n",
+    "cfg = flying_objects_config()\n",
+    "if cfg.GPU >=0:\n",
+    "    print(\"creating network model using gpu \" + str(cfg.GPU))\n",
+    "    os.environ['CUDA_VISIBLE_DEVICES'] = str(cfg.GPU)\n",
+    "elif cfg.GPU >=-1:\n",
+    "    print(\"creating network model using cpu \")  \n",
+    "    os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
+    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
+    "\n",
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
@@ -79,12 +99,10 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras \n",
-    "from configClassifier import *\n",
-    "from utilsClassifier import *\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import seaborn as sns\n",
     "from datetime import datetime\n",
-    "import os\n",
+    "\n",
     "import pprint\n",
     "\n",
     "# import the necessary packages\n",
@@ -111,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'training_data_dir': '../data/FlyingObjectDataset_10K/training', 'validation_data_dir': '../data/FlyingObjectDataset_10K/validation', 'testing_data_dir': '../data/FlyingObjectDataset_10K/testing', 'fineGrained': False, 'CLASSES': ['square', 'triangle', 'circular'], 'NUM_CLASS': 3, 'GPU': 1, 'DROPOUT_PROB': 0.5, 'IMAGE_WIDTH': 128, 'IMAGE_HEIGHT': 128, 'IMAGE_CHANNEL': 3, 'NUM_EPOCHS': 10, 'BATCH_SIZE': 32, 'LEARNING_RATE': 0.001, 'LR_DECAY_FACTOR': 0.1, 'PRINT_EVERY': 20, 'SAVE_EVERY': 1, 'DEBUG_MODE': True, 'DATA_AUGMENTATION': True}\n"
+     ]
+    }
+   ],
    "source": [
-    "cfg = flying_objects_config()\n",
     "image_shape = (cfg.IMAGE_HEIGHT, cfg.IMAGE_WIDTH, cfg.IMAGE_CHANNEL)\n",
     "modelObj = ClassifierDNNModel(num_classes=len(cfg.CLASSES), batch_size=cfg.BATCH_SIZE, inputShape=image_shape, dropout_prob=cfg.DROPOUT_PROB)\n",
     "model = modelObj.create_model()\n",
@@ -192,9 +217,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "######################################################################\n",
+      "##################### Training Data Statistics #####################\n",
+      "######################################################################\n",
+      "total image number \t 10817\n",
+      "total class number \t 3\n",
+      "class square \t 3488 images\n",
+      "class circular \t 3626 images\n",
+      "class triangle \t 3703 images\n",
+      "######################################################################\n",
+      "\n",
+      "######################################################################\n",
+      "##################### Validation Data Statistics #####################\n",
+      "######################################################################\n",
+      "total image number \t 2241\n",
+      "total class number \t 3\n",
+      "class triangle \t 745 images\n",
+      "class square \t 783 images\n",
+      "class circular \t 713 images\n",
+      "######################################################################\n",
+      "\n",
+      "######################################################################\n",
+      "##################### Testing Data Statistics #####################\n",
+      "######################################################################\n",
+      "total image number \t 2220\n",
+      "total class number \t 3\n",
+      "class triangle \t 733 images\n",
+      "class square \t 765 images\n",
+      "class circular \t 722 images\n",
+      "######################################################################\n"
+     ]
+    }
+   ],
    "source": [
     "#### show how the data looks like\n",
     "show_statistics(cfg.training_data_dir, fineGrained=cfg.fineGrained, title=\" Training Data Statistics \")\n",
@@ -211,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data is being augmented!\n"
+     ]
+    }
+   ],
    "source": [
     "# setup data\n",
     "if cfg.DATA_AUGMENTATION:\n",
@@ -241,9 +311,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data batch generators are created!\n"
+     ]
+    }
+   ],
    "source": [
     "nbr_train_data = get_dataset_size(cfg.training_data_dir)\n",
     "nbr_valid_data = get_dataset_size(cfg.validation_data_dir)\n",
@@ -265,9 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x (32, 128, 128, 3) float64 0.0 1.0\n",
+      "y (32, 3) float32 0.0 1.0\n",
+      "x (32, 128, 128, 3) float32 0.0 1.0\n",
+      "y (32, 3) float32 0.0 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "if cfg.DEBUG_MODE:\n",
     "    t_x, t_y = next(train_batch_generator)\n",
@@ -290,15 +379,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if cfg.GPU >=0:\n",
-    "    print(\"creating network model using gpu \" + str(cfg.GPU))\n",
-    "    os.environ['CUDA_VISIBLE_DEVICES'] = str(cfg.GPU)\n",
-    "elif cfg.GPU >=-1:\n",
-    "    print(\"creating network model using cpu \")  \n",
-    "    os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
-    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -309,9 +390,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 128, 128, 25)      700       \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 128, 128, 25)      0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 42, 42, 25)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 42, 42, 50)        11300     \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 42, 42, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 21, 21, 50)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 22050)             0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 2048)              45160448  \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 2048)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 3)                 6147      \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 3)                 0         \n",
+      "=================================================================\n",
+      "Total params: 45,178,595\n",
+      "Trainable params: 45,178,595\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "opt = tf.optimizers.Adam(cfg.LEARNING_RATE)\n",
     "model.compile(loss=keras.losses.categorical_crossentropy,\n",
@@ -330,7 +448,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "338/338 [==============================] - 62s 185ms/step - loss: 0.6969 - accuracy: 0.7634 - val_loss: 2.0068 - val_accuracy: 0.4174\n",
+      "Epoch 2/10\n",
+      "338/338 [==============================] - 48s 142ms/step - loss: 0.0157 - accuracy: 0.9967 - val_loss: 2.3916 - val_accuracy: 0.4589\n",
+      "Epoch 3/10\n",
+      "103/338 [========>.....................] - ETA: 24s - loss: 0.0121 - accuracy: 0.9970"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(aug_train_batch_generator,\n",
     "          epochs=cfg.NUM_EPOCHS,\n",
@@ -525,5 +656,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
