--- a/lab2_MLP_Classification/exercise_1.ipynb
+++ b/lab2_MLP_Classification/exercise_1.ipynb
@@ -20,28 +20,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Short summary\n",
-    "In this exercise you will: \n",
-    "\n",
+    "Welcome to the second lab in the Deep learning course! In this lab we will continue to take a look at the following;\n",
     "* train MLPs and for both classification and regression problems\n",
     "* overfit models and see how overfitting changes validation performance\n",
     "* avoid overfitting using regularization\n",
     "* do model selection\n",
     "\n",
-    "There are 11 questions in this exercise. These 11 questions can be found in five different cells below (see section \"The Different Cells\"). All of the exercises deal with training and evaluation of the multi-layer perceptron (MLP) network. You are going to work with different datasets, binary and multiple classification problems and function approximation problems. For all questions, except the last two ones, code is available that you can run directly or only need to make small modifications to. For the last two questions we only provide a small part of the code and you should provide the rest. However, it is typically just a matter of paste and copy from the previous code cells (in a proper way).\n",
+    "The lab include different datasets, binary and multiple classification problems and function approximation problems. A report will be written at the end of the notebook. \n",
     "\n",
-    "You will write the report of the exercise within this notebook. The details of how to do that can be found below in section \"Writing the report\". Finally before you start:\n",
-    "\n",
-    "# Data: syn1 - syn3\n",
     "Three different synthetic classification problems will be used. They are all 2D binary classification problems which allows for an easy visual inspection of the different classes and the decision boundary implemented by the network. They are called *syn1, syn2* and *syn3*. Each of these datasets are generated \"on the fly\" each time. They come from various normal distributions. Since they are generated using random numbers it means that each time you generate the data it will be slightly different from next time. You can control this by having a fixed *seed* to the random number generator. The cell \"PlotData\" will plot these datasets.\n",
     "\n",
-    "## The exercises\n",
-    "There are 11 questions:\n",
-    "* 5 questions are dealing with 2D binary classification problems. Here you will be able to see the boundary implemented by the different MLPs that you train. \n",
-    "* Questions 6-9 deals with training a regression network for the *regr1* dataset. Here you are also going to use regularization to \"combat\" overtraining. \n",
-    "* Question 10 is the Japanese vowels classification problem, here your task is to come up with a model that optimizes the validation result. * * Last exercise is to find a model that can solve the spiral problem.\n",
-    "\n",
-    "## Last but not least\n",
     "Have fun!\n",
     "\n",
     "---"
@@ -217,8 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1\n",
-    "Use syn1 with 100 data points and train a linear MLP to separate the two classes, i.e. use a single hidden node. "
+    "**TODO:** Use syn1 with 100 data points and train a linear MLP to separate the two classes, i.e. use a single hidden node. What happened? Can the problem be solved with a single hidden node?"
    ]
   },
   {
@@ -402,14 +389,6 @@
    "source": [
     "#metrics.stats_class()\n",
     "metrics.stats_class(x, y, 'Training', trainer.get_model())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 1\n",
-    "Why can you solve this problem with a single hidden node?"
    ]
   }
  ],
