--- a/lab2_MLP_Classification/exercise_2.ipynb
+++ b/lab2_MLP_Classification/exercise_2.ipynb
@@ -203,24 +203,31 @@
     "\n",
     "Now, use syn2 dataset with 100 training data points and train a *linear* MLP to separate the two classes, i.e. use a single hidden node.\n",
     "\n",
-    "**Question:** What is the performance you get on the validation dataset?\n",
+    "**TODO:** What is the performance you get on the validation dataset?\n",
     "\n",
     "## Task 2\n",
     "This task should overtrain the MLP! Increase the number of hidden nodes to get better and better training performance.\n",
     "\n",
     "**Hint:** Overtraining here often means finding good local minimum of the error function, which may require some tuning of the learning parameters. This means that you may have to change the learning rate, increase the number of epochs and use \"better\" minimization methods. Even though we have not yet talked about the *Adam* minimization method, it is generally better than vanilla *stochastic gradient descent*. It is therefore used in the cells below as the default minimizer. Also you may want to change the size of the \"batch_size\" parameter. It is by default using all data.\n",
     "\n",
-    "**Question:** How many hidden nodes do you need to reach an accuracy >95% on your training dataset?\n",
+    "**TODO:** How many hidden nodes do you need to reach an accuracy >95% on your training dataset?\n",
     "\n",
     "## Task 3\n",
     "Now you are going to use the *syn3* dataset. So, use **150** training datapoints from the synthetic dataset 3 and train an MLP to separate the two classes. Also use about 1000 datapoints for validation.\n",
     "\n",
-    "**Question:** When you overtrained in the previous question, how much much did the validation *loss* increase, compared to the linear model of Task 2?\n",
+    "**TODO:** When you overtrained in the previous question, how much much did the validation *loss* increase, compared to the linear model of Task 2?\n",
     "\n",
-    "**Question:** What is the optimal number of hidden nodes for the syn2 dataset in order to maximize your validation performance?\n",
+    "**TODO:** What is the optimal number of hidden nodes for the syn2 dataset in order to maximize your validation performance?\n",
     "\n",
-    "**Question:** How many hidden nodes do you need to find a reasonable solution to the problem?  Extra: Can you figure out why this many?"
+    "**TODO:** How many hidden nodes do you need to find a reasonable solution to the problem?  Extra: Can you figure out why this many?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
