--- a/lab2_MLP_Classification/exercise_4.ipynb
+++ b/lab2_MLP_Classification/exercise_4.ipynb
@@ -26,7 +26,7 @@
     "# Tasks\n",
     "\n",
     "## Task 1\n",
-    "Present an MLP with associated hyperparameters that maximizes the validation performance and give the test performance you obtained.\n",
+    "**TODO:** Present an MLP with associated hyperparameters that maximizes the validation performance and give the test performance you obtained.\n",
     "\n",
     "**Hint 1:** \n",
     "Remember to check if input data needs to be normalized. See the \"Ex3\" cell how this was done (in that case for the target data).\n",
@@ -96,7 +96,7 @@
     "## Task 2\n",
     "For this last exercise the task is to train a binary classifier for the spiral problem. The aim is to get *zero* classification error for the training data (there is no test data) with as small as possible model, in terms of the number of trainable weights. Also plot the boundary to see if it resembles a spriral. To pass this question you should at least try!\n",
     "\n",
-    "Train a classifier for the spiral problem with the aim of zero classification error with as small as possible model."
+    "**TODO:** Train a classifier for the spiral problem with the aim of zero classification error with as small as possible model."
    ]
   },
   {
