--- a/Projects/project3_object_detection/lab.ipynb
+++ b/Projects/project3_object_detection/lab.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#SSD like single-shot multibox detectors. In case we have enough time left, we can also add 2-stage detectors, e.g. R-CNN."
+   ]
   }
  ],
  "metadata": {
