Cleanup of repository. Added some explaination to labs. Added report notebook

--- a/lab1_Backpropagation/Exercise_0102.ipynb
+++ b/lab1_Backpropagation/Exercise_0102.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "In this lab we will scratch the surface of pytorch and deep learning. Pytorch is a power tool for data scientists to train neural networks. Pytorch have a lot of features which can be used too train and create custom dataloaders, models and trainers in order to solve most problems related to neural networks.\n",
     "\n",
-    "For this lab all tasks include **TODO's** these are expected to be done before the deadline. The labs also include **Question** which should be answered and included in the report. Some sections does not contain any **TODO's** but is good to understand them. \n",
+    "For this lab all tasks include **TODO's** these are expected to be done before the deadline. The labs also include **Question** which should be answered and included in the *Report.ipynb*. Some sections does not contain any **TODO's** but is good to understand them. \n",
     "\n",
     "There is a file called config.py. This file contains most of the settings that is used during the lab. We wont use every setting at all time but the config help us to keep organised.\n",
     "\n",
@@ -567,34 +567,6 @@
     "display(df_result.T)\n",
     "plt.imshow(torchvision.utils.make_grid(images[:n_test, :, :, :], nrow=n_test).permute(1,2,0))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Report\n",
-    "\n",
-    "Summary your findings and motivate your choice of approach. A better motivation show your understanding of the lab. Dont forget to include the result from part 1!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Name:** \\\n",
-    "**Date:** \n",
-    "\n",
-    "## Introduction\n",
-    "\n",
-    "## Result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
