--- a/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
+++ b/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
@@ -48,17 +48,147 @@
     "**TODO:** Give the L2 value that you found to give \"optimal\" validation performance and compare with the result from  question 7 (optimal performance).\n",
     "\n",
     "## Task 4\n",
-    "Summarize your findings in a few sentences.\n"
+    "**TODO:** Summarize your findings in a few sentences.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code allows us to edit imported files without restarting the kernel for the notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Hacky solution to access the global utils package\n",
+    "import sys,os\n",
+    "sys.path.append(os.path.dirname(os.path.realpath('..')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/metrics/__init__.py:43: LightningDeprecationWarning: `pytorch_lightning.metrics.*` module has been renamed to `torchmetrics.*` and split off to its own package (https://github.com/PyTorchLightning/metrics) since v1.3 and will be removed in v1.5\n",
+      "  rank_zero_deprecation(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "from config import LabConfig\n",
+    "from dataset import MLPData\n",
+    "from DL_labs.utils.model import Model\n",
+    "from DL_labs.utils.progressbar import LitProgressBar\n",
+    "from DL_labs.utils.model import Model\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from DL_labs.utils import (\n",
+    "    plot,\n",
+    "    progressbar\n",
+    ") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = LabConfig()\n",
+    "cfg.classification(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining the MLP model\n",
+    "\n",
+    "This cell defines the MLP model. There are a number of parameters that is needed to \n",
+    "define a model. Here is a list of them: **Note:** They can all be specified when you call\n",
+    "this function in later cells. The ones specified in this cell are the default values.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(torch.nn.Module):\n",
+    "    def __init__(self, \n",
+    "                inp_dim=None,         \n",
+    "                hidden_nodes=1,                      # number of nodes in hidden layer\n",
+    "                num_out=None,\n",
+    "                **kwargs\n",
+    "            ):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = torch.nn.Linear(inp_dim, hidden_nodes)\n",
+    "        self.relu = torch.nn.ReLU()\n",
+    "        self.fc2 = torch.nn.Linear(hidden_nodes, num_out)\n",
     "\n",
     "\n",
+    "    def forward(self, x):\n",
+    "        hidden = self.fc1(x)\n",
+    "        relu = self.relu(hidden)\n",
+    "        output = self.fc2(relu)\n",
+    "        return torch.sigmoid(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define a function that allow us to convert numpy to pytorch DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
+    "    return DataLoader(\n",
+    "        TensorDataset(\n",
+    "            torch.from_numpy(x).float(), \n",
+    "            torch.from_numpy(y).unsqueeze(1).float()\n",
+    "        ),\n",
+    "        batch_size=batch_size,\n",
+    "        num_workers=num_workers,\n",
+    "        **kwargs\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Generate training and validation data\n",
     "x_train, d_train = MLPData.regr1(250, 0.0) # 250 data points with no noise\n",
     "x_val, d_val = MLPData.regr1(1000, 0.0)\n",
@@ -69,30 +199,60 @@
     "d_train = (d_train - norm_m) / norm_s\n",
     "\n",
     "# We use the same normalization for the validation data.\n",
-    "d_val = (d_val - norm_m) / norm_s"
+    "d_val = (d_val - norm_m) / norm_s\n",
+    "\n",
+    "train_loader = numpy2Dataloader(x_train,d_train)\n",
+    "val_loader =  numpy2Dataloader(x_val,d_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuration\n",
+    "Setup our local config that should be used for the trainer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
+    "    'max_epochs':4,\n",
     "    'model_params':{\n",
     "        'inp_dim':x_train.shape[1],         \n",
     "        'hidden_nodes':1,   # activation functions for the hidden layer\n",
     "        'num_out':1 # if binary --> 1 |  regression--> num inputs | multi-class--> num of classes\n",
     "    },\n",
-    "    'optimizer':'Adam',               # minimization method\n",
-    "    'criterion':'BCELoss', # error function\n",
-    "    'max_epochs':10,\n",
+    "    'criterion':torch.nn.BCELoss(), # error function\n",
+    "    'optimizer':{\n",
+    "        \"type\":torch.optim.Adam,\n",
+    "        \"args\":{\n",
+    "            \"lr\":0.005,\n",
+    "        }\n",
+    "    }\n",
     "}"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, put everything together and call on the trainers fit method. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +261,8 @@
      "text": [
       "GPU available: True, used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
+      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/trainer/configuration_validator.py:101: UserWarning: you defined a validation_step but have no val_dataloader. Skipping val loop\n",
+      "  rank_zero_warn(f'you defined a {step_name} but have no {loader_name}. Skipping {stage} loop')\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
      ]
     },
@@ -108,51 +270,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1e+03 ns, sys: 3 µs, total: 4 µs\n",
-      "Wall time: 6.91 µs\n",
-      "Epoch 100 [4/4] {'loss': '0.613'}\r"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'pred_trn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-60-1c247dfaef09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m#pred_trn = model.predict(x_train).reshape(d_train.shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m#pred_val = model.predict(x_val).reshape(d_val.shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats_reg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred_trn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Training'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats_reg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Validation'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pred_trn' is not defined"
+      "Epoch 4 [10/10] {'loss': '0.697'}\r"
      ]
     }
    ],
    "source": [
-    "%%time\n",
-    "# Get the model\n",
-    "model = Agent(MLP,**config)\n",
+    "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
-    "# Train the model\n",
     "trainer = pl.Trainer(\n",
     "            max_epochs=config['max_epochs'], \n",
-    "            gpus=-1 if torch.cuda.is_available() else None, \n",
-    "            logger=metrics.MetricsLogger(),\n",
+    "            gpus=cfg.GPU,\n",
+    "            logger=pl.loggers.TensorBoardLogger(save_dir=cfg.TENSORBORD_DIR),\n",
+    "            callbacks=[LitProgressBar()],\n",
     "            progress_bar_refresh_rate=1,\n",
     "            weights_summary=None, # Can be None, top or full\n",
-    "            num_sanity_val_steps=10, \n",
-    "            callbacks=[progressbar.LitProgressBar()]\n",
+    "            num_sanity_val_steps=10,   \n",
     "        )\n",
-    "\n",
-    "# Train the model\n",
     "trainer.fit(\n",
     "    model, \n",
-    "    train_dataloader=train_loader,\n",
-    "    val_dataloaders=val_loader\n",
-    ");\n",
-    "\n",
+    "    train_dataloader=train_loader\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Call the stats function to print out statistics for classification problems\n",
     "#pred_trn = model.predict(x_train).reshape(d_train.shape)\n",
     "#pred_val = model.predict(x_val).reshape(d_val.shape)\n",
-    "plot.stats_reg(d_train, pred_trn, 'Training', estimator)\n",
-    "plot.stats_reg(d_val, pred_val, 'Validation', estimator)\n",
+    "#plot.stats_reg(d_train, pred_trn, 'Training', estimator)\n",
+    "#plot.stats_reg(d_val, pred_val, 'Validation', estimator)\n",
     "\n",
     "# Scatter plots of predicted and true values\n",
     "plt.figure()\n",
